ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/Vehicle_Detail__c.object-meta.xml
<CustomObject>
    <label>Vehicle Detail</label>
    <nameField>
        <displayFormat>VD-{00000}</displayFormat>
        <label>Vehicle Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>