ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Available_disbursal_amount__c.field-meta.xml
<CustomField>
    <fullName>Available_disbursal_amount__c</fullName>
    <label>Available Disbursal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>