ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Base_Prices__c.field-meta.xml
<CustomField>
    <fullName>Base_Prices__c</fullName>
    <formula>IF(((ISPICKVAL( Loan_Application__r.Product_Type__c , &apos;Passenger Vehicles&apos;) || ISPICKVAL( Loan_Application__r.Product_Type__c , &apos;Tractor&apos;))  &amp;&amp; (Loan_Application__r.Vehicle_Type__c ==&apos;Used&apos; || Loan_Application__r.Vehicle_Type__c ==&apos;Refinance&apos;)) ,  IF((Valuation_price__c&gt;0), Valuation_price__c, Insurance_declared_value__c ), IF(AND(Valuation_price__c&gt;0,Grid_value__c&gt;0, Selling_Price__c&gt;0), 
	MIN(Grid_value__c , Selling_Price__c,Valuation_price__c), 
 If( AND(Grid_value__c&gt;0, Selling_Price__c&gt;0),
	MIN(Grid_value__c , Selling_Price__c),
 IF( AND(Valuation_price__c&gt;0, Selling_Price__c&gt;0),
	MIN(Valuation_price__c , Selling_Price__c),	
If( AND(Valuation_price__c&gt;0, Grid_value__c&gt;0),
	MIN(Valuation_price__c , Grid_value__c),
	If(Grid_value__c&gt;0, Grid_value__c,
	If(Valuation_price__c&gt;0, Valuation_price__c,
	If(Selling_Price__c&gt;0,Selling_Price__c,0
	))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base_Prices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>