ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Ben_Code__c.field-meta.xml
<CustomField>
    <fullName>Ben_Code__c</fullName>
    <label>Ben Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>