ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Can_we_continue_with_above_RC_limit__c.field-meta.xml
<CustomField>
    <fullName>Can_we_continue_with_above_RC_limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can we continue with above RC limit ?</label>
    <type>Checkbox</type>
</CustomField>