ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/CarwaleApi_Attemps__c.field-meta.xml
<CustomField>
    <fullName>CarwaleApi_Attemps__c</fullName>
    <label>CarwaleApi Attemps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>