ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Change_Pay_IN_Pay_OUT__c.field-meta.xml
<CustomField>
    <fullName>Change_Pay_IN_Pay_OUT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Pay IN Pay OUT</label>
    <type>Checkbox</type>
</CustomField>