ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Chassis_number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_number__c</fullName>
    <label>Chassis number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>