ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Chassis_Number_during_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number_during_Inspection__c</fullName>
    <label>Chassis Number during Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>