ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Color_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Color_of_Vehicle__c</fullName>
    <label>Color of Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>