ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Cost_of_the_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_the_Chassis__c</fullName>
    <label>Cost of the Chassis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>