ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/CVO_remarks__c.field-meta.xml
<CustomField>
    <fullName>CVO_remarks__c</fullName>
    <label>CVO remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>