ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/CVO_Remarks_for_RC_Limit__c.field-meta.xml
<CustomField>
    <fullName>CVO_Remarks_for_RC_Limit__c</fullName>
    <label>CVO Remarks for RC Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>