ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Dealer_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Pincode__c</fullName>
    <label>Dealer Pincode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>