ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Disbursement_TAT__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_TAT__c</fullName>
    <formula>(Payment_requested__c -  DateValue(Loan_Application__r.CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement TAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>