ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/DLP__c.field-meta.xml
<CustomField>
    <fullName>DLP__c</fullName>
    <description>Dealer Landing Price</description>
    <label>DLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>