ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Eligible_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Loan_Amount__c</fullName>
    <label>Eligible Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>