ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Engine_number__c.field-meta.xml
<CustomField>
    <fullName>Engine_number__c</fullName>
    <label>Engine number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>