ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Engine_Number_during_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Engine_Number_during_Inspection__c</fullName>
    <label>Engine Number during Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>