ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Executive_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Executive_Contact_Number__c</fullName>
    <label>Executive Contact Number</label>
    <type>Phone</type>
</CustomField>