ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Executive_name__c.field-meta.xml
<CustomField>
    <fullName>Executive_name__c</fullName>
    <label>Executive name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>