ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount__c</fullName>
    <label>Finance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>