ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Fitness_Upto__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Upto__c</fullName>
    <label>Fitness Upto</label>
    <type>DateTime</type>
</CustomField>