ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Funding_on_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_on_Invoice_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding on Invoice Amount</label>
    <type>Checkbox</type>
</CustomField>