ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Grid_value__c.field-meta.xml
<CustomField>
    <fullName>Grid_value__c</fullName>
    <label>Grid value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>