ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/How_much_margin_amount_paid_to_dealer__c.field-meta.xml
<CustomField>
    <fullName>How_much_margin_amount_paid_to_dealer__c</fullName>
    <label>How much margin amount paid to dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>