ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/IBB_Internal_API_Attempts__c.field-meta.xml
<CustomField>
    <fullName>IBB_Internal_API_Attempts__c</fullName>
    <label>IBB Internal API Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>