ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Ins_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Ins_Expiry_date__c</fullName>
    <label>Ins. Expiry date</label>
    <type>Date</type>
</CustomField>