ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Ins_Issuance_date__c.field-meta.xml
<CustomField>
    <fullName>Ins_Issuance_date__c</fullName>
    <label>Ins. Issuance date</label>
    <type>Date</type>
</CustomField>