ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Installment_Type__c.field-meta.xml
<CustomField>
    <fullName>Installment_Type__c</fullName>
    <label>Installment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Structured</fullName>
            </value>
            <value>
                <fullName>Equated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>