ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Insurance_Available__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Available</label>
    <type>Checkbox</type>
</CustomField>