ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Insurance_expiring_within_60_days__c.field-meta.xml
<CustomField>
    <fullName>Insurance_expiring_within_60_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance expiring within 60 days</label>
    <type>Checkbox</type>
</CustomField>