ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Insurance_type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_type__c</fullName>
    <label>Insurance type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>