ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Invoice_in_the_name_of__c.field-meta.xml
<CustomField>
    <fullName>Invoice_in_the_name_of__c</fullName>
    <label>Invoice in the name of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>