ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price__c</fullName>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>