ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/IO_City__c.field-meta.xml
<CustomField>
    <fullName>IO_City__c</fullName>
    <description>D2C field initial offer to save city separately from final offer</description>
    <label>IO City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>