ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/IO_Make__c.field-meta.xml
<CustomField>
    <fullName>IO_Make__c</fullName>
    <description>D2C Field for initial offer value</description>
    <label>IO Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>