ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/IO_Make_Code__c.field-meta.xml
<CustomField>
    <fullName>IO_Make_Code__c</fullName>
    <description>D2C initial offer fields</description>
    <label>IO Make Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>