ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/IO_Model__c.field-meta.xml
<CustomField>
    <fullName>IO_Model__c</fullName>
    <description>D2C field for initial offer</description>
    <label>IO Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>