ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/IO_Variant__c.field-meta.xml
<CustomField>
    <fullName>IO_Variant__c</fullName>
    <description>D2C Field for initial offer</description>
    <label>IO Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>