ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Is_Customer_Interested_in_MotorInsurance__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Interested_in_MotorInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Interested in MotorInsurance</label>
    <type>Checkbox</type>
</CustomField>