ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Is_D_Category_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Is_D_Category_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For D Category Vehicle , Journey Will be stop in Asset</description>
    <label>Is D Category Vehicle</label>
    <type>Checkbox</type>
</CustomField>