ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Is_Get_Vehicle_Details_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_Get_Vehicle_Details_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Get Vehicle Details Successful</label>
    <type>Checkbox</type>
</CustomField>