ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Is_MFC_Valuation_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_MFC_Valuation_Request_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MFC Valuation Request Submitted</label>
    <type>Checkbox</type>
</CustomField>