ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Is_RC_Limit_Check_correctly_captured__c.field-meta.xml
<CustomField>
    <fullName>Is_RC_Limit_Check_correctly_captured__c</fullName>
    <label>Is RC Limit Check correctly captured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>