ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/isOEMDealerChecked__c.field-meta.xml
<CustomField>
    <fullName>isOEMDealerChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOEMDealerChecked</label>
    <type>Checkbox</type>
</CustomField>