ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/KMS_Run__c.field-meta.xml
<CustomField>
    <fullName>KMS_Run__c</fullName>
    <label>KMS Run</label>
    <length>255</length>
    <type>Text</type>
</CustomField>