ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/L1_Insurance_Submitted__c.field-meta.xml
<CustomField>
    <fullName>L1_Insurance_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 Insurance Submitted</label>
    <type>Checkbox</type>
</CustomField>