ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/L1_InsuranceChanged__c.field-meta.xml
<CustomField>
    <fullName>L1_InsuranceChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 InsuranceChanged</label>
    <type>Checkbox</type>
</CustomField>