ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/L2_Insurance_Submitted__c.field-meta.xml
<CustomField>
    <fullName>L2_Insurance_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L2 Insurance Submitted</label>
    <type>Checkbox</type>
</CustomField>