ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Last_owner_name__c.field-meta.xml
<CustomField>
    <fullName>Last_owner_name__c</fullName>
    <label>Last owner name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>