ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
                <default>true</default>
                <label>Dealer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>