ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Lien_in_favor_of__c.field-meta.xml
<CustomField>
    <fullName>Lien_in_favor_of__c</fullName>
    <label>Lien in favor of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IBL</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>