ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Loan_tenure__c.field-meta.xml
<CustomField>
    <fullName>Loan_tenure__c</fullName>
    <label>Loan tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>