ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Location_Of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Location_Of_Vehicle__c</fullName>
    <label>Location Of Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer place</fullName>
            </value>
            <value>
                <fullName>Customer place</fullName>
            </value>
            <value>
                <fullName>Seller place</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
            <value>
                <fullName>IBL office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>