ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/LTV_Without_Insurance__c.field-meta.xml
<CustomField>
    <fullName>LTV_Without_Insurance__c</fullName>
    <label>LTV Without Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>