ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Make_Code__c.field-meta.xml
<CustomField>
    <fullName>Make_Code__c</fullName>
    <label>Make Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>