ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Maker_Model__c.field-meta.xml
<CustomField>
    <fullName>Maker_Model__c</fullName>
    <label>Maker Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>