ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Manufacturer_Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Year_Month__c</fullName>
    <label>Manufacturer Year, Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>