ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/MFC_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>MFC_Request_Id__c</fullName>
    <label>MFC Request Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>