ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/MFC_Valuation_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>MFC_Valuation_Report_Date__c</fullName>
    <label>MFC Valuation Report Date</label>
    <type>DateTime</type>
</CustomField>