ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/MFC_valuation_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>MFC_valuation_Report_URL__c</fullName>
    <label>MFC valuation Report URL</label>
    <type>Url</type>
</CustomField>