ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <label>Model Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>