ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/NOC_Number__c.field-meta.xml
<CustomField>
    <fullName>NOC_Number__c</fullName>
    <label>NOC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>