ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Number_of_ownerships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ownerships__c</fullName>
    <label>Number of ownerships</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>&gt;3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>