ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/OEM_Dealer__c.field-meta.xml
<CustomField>
    <fullName>OEM_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OEM Dealer</label>
    <type>Checkbox</type>
</CustomField>