ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Overall_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks__c</fullName>
    <description>This field is used for storing the response from MFCfetchValuation Report API</description>
    <label>Overall Remarks</label>
    <length>50</length>
    <type>Text</type>
</CustomField>