ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Owner_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact_Number__c</fullName>
    <label>Owner&apos;s Contact Number</label>
    <type>Phone</type>
</CustomField>