ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>