ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Owner_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sr_No__c</fullName>
    <label>Owner Sr No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>