ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Parent_Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Deal_Number__c</fullName>
    <description>Parent Deal Number field is used to store Vehicle Dedupe values</description>
    <label>Parent Deal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>