ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Parent_RCU_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_RCU_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent RCU Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vehicle Details</relationshipLabel>
    <relationshipName>Vehicle_Details</relationshipName>
    <type>Lookup</type>
</CustomField>