ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Payment_requested__c.field-meta.xml
<CustomField>
    <fullName>Payment_requested__c</fullName>
    <label>Payment requested</label>
    <type>Date</type>
</CustomField>