ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Penny_Drop_Api_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Penny_Drop_Api_Attempts__c</fullName>
    <label>Penny Drop Api Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>