ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Present_Address__c.field-meta.xml
<CustomField>
    <fullName>Present_Address__c</fullName>
    <label>Present Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>