ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <label>Product Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>