ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Purpose_of_IBB_fetch__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_IBB_fetch__c</fullName>
    <label>Purpose of IBB fetch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>