ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/Purpose_of_purchase__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_purchase__c</fullName>
    <label>Purpose of purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <default>true</default>
                <label>Personal</label>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>