ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/PV_TW_Dedupe_API_Flag__c.field-meta.xml
<CustomField>
    <fullName>PV_TW_Dedupe_API_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PV/TW Dedupe API Flag</description>
    <label>PV/TW Dedupe API Flag</label>
    <type>Checkbox</type>
</CustomField>