ProdIND/ProdPrograms/force-app/main/default/objects/Vehicle_Detail__c/fields/RC_Hold_Amount__c.field-meta.xml
<CustomField>
    <fullName>RC_Hold_Amount__c</fullName>
    <description>RC Hold Amount will be available on Asset Detail Screen and used in PACT API request boday</description>
    <label>RC Hold Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>